--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,33 @@
 ---
+
 ---
-<div>
-<p>Footer - tilføj footerindhold</p>
-</div>
-  
+
+<section
+  class="whitespace-nowrap overflow-x-hidden bg-black text-white py-4 fixed bottom-0 w-full uppercase mt-10"
+>
+  <div
+    class="inline-block animate-infinite-scroll whitespace-nowrap [&_span]:mx-6"
+  >
+    <span>Jeg Søger Praktik </span>
+    <span>Jeg Søger Praktik </span>
+    <span>Jeg Søger Praktik </span>
+    <span>Jeg Søger Praktik </span>
+    <span>Jeg Søger Praktik </span>
+    <span>Jeg Søger Praktik </span>
+    <span>Jeg Søger Praktik </span>
+    <span>Jeg Søger Praktik </span>
+  </div>
+  <div
+    class="inline-block animate-infinite-scroll whitespace-nowrap [&_span]:mx-6"
+    aria-hidden="true"
+  >
+    <span>Jeg Søger Praktik </span>
+    <span>Jeg Søger Praktik </span>
+    <span>Jeg Søger Praktik </span>
+    <span>Jeg Søger Praktik </span>
+    <span>Jeg Søger Praktik </span>
+    <span>Jeg Søger Praktik </span>
+    <span>Jeg Søger Praktik </span>
+    <span>Jeg Søger Praktik </span>
+  </div>
+</section>
